fixed a bug where text was overflowing onto a second line making my cards different sizes

--- a/myvenue/static/css/style.css
+++ b/myvenue/static/css/style.css
@@ -74,6 +74,8 @@ body {
 
 .card-title {
   text-transform: uppercase;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media  screen and (max-width: 800px) {
